--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.oc_p7">
+    package="com.openclassrooms.oc_p7">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OC_P7">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name="com.openclassrooms.oc_p7.MainActivity"></activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="com.openclassrooms.oc_p7.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
