--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OC_P7">
-        <activity android:name="com.openclassrooms.oc_p7.MainActivity"></activity>
-        <activity
-            android:name="com.openclassrooms.oc_p7.LoginActivity"
-            android:label="@string/app_name">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.DashboardActivity" />
+        <activity android:name=".view.LoginActivity" />
     </application>
 
 </manifest>
