--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     // Declare the dependency for the Firebase Authentication library
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
+    //Declare the dependency for the Facebook Authentication with Firebase
+    //implementation 'com.facebook.android:facebook-core:8.2.0'
+
 
 
 }
