--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //Declare the dependency for the Facebook Authentication with Firebase
-    //implementation 'com.facebook.android:facebook-core:8.2.0'
+   // implementation 'com.facebook.android:facebook-login:[8.1)'
 
 
 
