--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -34,6 +35,8 @@ android {
 }
 
 dependencies {
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -62,7 +65,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //Declare the dependency for the Facebook Authentication with Firebase
-   // implementation 'com.facebook.android:facebook-login:[8.1)'
+    //implementation 'com.facebook.android:facebook-core:8.2.0'
+    implementation 'com.facebook.android:facebook-login:8.1.0'
+
+    //multidex
+    implementation 'com.android.support:multidex:1.0.3'
+
 
 
 
