--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,14 @@ dependencies {
     //multidex
     implementation 'com.android.support:multidex:1.0.3'
 
-    //GooglePlay service Map
+    //Google Map
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    // implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    //Google Places
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+
+
+
 
 
 }
