--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/map_key" />
+            android:value="@string/GOOGLE_MAP_API_KEY" />
 
         <activity android:name=".view.MainActivity">
             <intent-filter>
