--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,13 @@ dependencies {
     //Google Places
     implementation 'com.google.android.libraries.places:places:2.4.0'
 
+    //Glide to load url as pic
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 
 }
