--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,13 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Retrofit to simplify API Calls
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //Gson converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
 
 
 }
