--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,10 @@ android {
 }
 
 dependencies {
+    
     def multidex_version = "2.0.1"
+    def room_version = "2.3.0"
+
     implementation "androidx.multidex:multidex:$multidex_version"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -92,6 +95,10 @@ dependencies {
 
     //Gson converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Room database
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 
 
