--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,10 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    //Firestore database
+    implementation 'com.firebaseui:firebase-ui-firestore:3.1.3'
+
+
 
 
 
