--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
+    //ImageSlider
+    implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
+
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
