--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
 
     // Test
 
+    testImplementation "com.google.guava:guava:30.1.1-android"
     testImplementation "org.mockito:mockito-core:3.11.2"
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0', {
