--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OC_P7">
-        <activity android:name=".views.activities.LoginWithUsernameActivity"></activity>
+        <activity android:name=".views.activities.LoginWithUsernameActivity" />
         <activity android:name=".views.activities.DetailsActivity" />
 
         <meta-data
