--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     //Glide to load url as pic
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
     //ImageSlider
