--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,13 +140,8 @@ dependencies {
     //for testing retrofit.
     testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
 
-    /*
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    //Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 
-     */
 
 }
