--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     testImplementation 'androidx.test:core:1.4.0'
 
 
+
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
 
@@ -126,11 +127,12 @@ dependencies {
     // Test
 
     testImplementation "com.google.guava:guava:30.1.1-android"
-    testImplementation "org.mockito:mockito-core:3.11.2"
+    //testImplementation "org.mockito:mockito-core:3.11.2"
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0', {
         exclude group: 'org.mockito', module: 'mockito-core'
     }
+
 
     //for retrofit.
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
