--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     def multidex_version = "2.0.1"
     def room_version = "2.3.0"
+    def core_version = "1.6.0"
 
     implementation "androidx.multidex:multidex:$multidex_version"
 
@@ -144,6 +145,9 @@ dependencies {
 
     //Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
+
+    //Notification
+    implementation "androidx.core:core:$core_version"
 
 
 }
