--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         </activity>
         <activity android:name=".views.activities.DashboardActivity" />
         <activity android:name=".views.activities.LoginActivity" />
+        <receiver android:name=".services.utils.ReminderBroadcast" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
