--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,6 @@ dependencies {
     testImplementation 'androidx.test:core:1.4.0'
 
 
-
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
 
@@ -148,6 +147,10 @@ dependencies {
 
     //Notification
     implementation "androidx.core:core:$core_version"
+
+    //Event bus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
 
 
 }
