--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
 
     <application
+
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OC_P7">
+        <receiver
+            android:name=".services.utils.ReminderBroadcast"
+            android:enabled="true" />
+
         <activity android:name=".views.activities.LoginWithUsernameActivity" />
         <activity android:name=".views.activities.DetailsActivity" />
 
@@ -48,7 +53,6 @@
         </activity>
         <activity android:name=".views.activities.DashboardActivity" />
         <activity android:name=".views.activities.LoginActivity" />
-        <receiver android:name=".services.utils.ReminderBroadcast" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
